# apple-mig

./: CMakeLists.txt
mach/: boolean.h  message.h  ndr.h  std_types.h
migcom.tproj/: CMakeLists.txt  mig.sh
